--- a/components/navbar.html
+++ b/components/navbar.html
@@ -56,7 +56,7 @@
           Contact
         </a>
 
-         <a href="Achievements.html" class="nav-link relative hover:text-cyan-300 transition
+         <a href="achievements.html" class="nav-link relative hover:text-cyan-300 transition
            after:absolute after:left-0 after:-bottom-1 after:h-[2px]
            after:w-0 after:bg-cyan-400 after:transition-all hover:after:w-full">
           Achievements
@@ -112,5 +112,6 @@
     </div>
   </div>
 </nav>
+
 
 <div class="h-16"></div>
